<resources>
    <string name="app_name">Pomodoro</string>
    <string name="title_task">Goals</string>
    <string name="title_activities">Activities</string>
    <string name="title_timer">Timer</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="action_create_data">CreateData</string>
    <string name="action_delete_data">DeleteAllData</string>
    <string name="action_settings">Setting</string>
    <string name="action_about">About</string>

    <string name="account">Account</string>
    <string name="email" translatable="false">Email</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>

    <!-- Show tasks   -->
    <string name="task_marked_complete">Task marked complete</string>

    <!-- Create a new task   -->
    <string name="image_task">Icon</string>
    <string name="create_task">Create a new task</string>
    <string name="input_task_name">Input name of new task</string>

    <!-- RecyclerView -->
    <string name="icon_msg">Icon</string>
    <string name="item_removable">Drag  and Remove</string>
    <string name="List_header_text_task">Tasks in Plan</string>

    <!-- CountDownTimerFragment   -->
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="second">Second</string>

<!--TODO: for initial debug&testing only, will remove in future    -->
    <string name="rules_text" translatable="false">Select the answer from the options given. Each time you get an answer correct, you advance to the next question.\n\nIf you get the answer wrong, your game ends! You can return to the title screen using up or back from within the game screen, and this will also end your game.</string>
    <string name="terms_of_service" translatable="false">Terms of Service</string>
    <string name="privacy_policy" translatable="false">Privacy Policy</string>
    <string name="agreement" translatable="false">Agreement</string>
    <string name="goodbye_message">Welcome to use Pomodoro Tool again.</string>
    <string name="action_show_in_snackbar">SnackBar</string>
    <string name="time_seperator">:</string>


</resources>