<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_baseline_art_track_24"
            android:title="@string/action_about" />
    </group>

    <item android:title="@string/agreement">
        <menu>
            <item
                android:id="@+id/nav_privacy_policy"
                android:icon="@drawable/ic_lock"
                android:title="@string/privacy_policy" />

            <item
                android:id="@+id/nav_terms_of_service"
                android:icon="@drawable/ic_text"
                android:title="@string/terms_of_service" />

        </menu>
    </item>
</menu>
