<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- 搜索, 应该作为动作按钮展示-->
<!--    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom"
        android:title="@string/action_search" />-->

    <!-- 设置, 在溢出菜单中展示 -->
    <item
        android:id="@+id/aboutFragment"
        android:title="@string/action_about" />
    <item
        android:id="@+id/action_create_data"
        android:title="@string/action_create_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_data"
        android:title="@string/action_delete_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_snack_bar"
        android:title="@string/action_show_in_snackbar"
        app:showAsAction="never" />
</menu>