<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/navigation_project">

    <fragment
        android:id="@+id/navigation_project"
        android:name="com.example.pomodoro2.features.projects.presentation.ProjectFragment"
        android:label="@string/title_project"
        tools:layout="@layout/fragment_project" >
        <action
            android:id="@+id/action_navigation_project_to_navigation_activity"
            app:destination="@id/navigation_activity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_activity"
        android:name="com.example.pomodoro2.features.activities.presentation.ActivityFragment"
        android:label="@string/title_activities"
        tools:layout="@layout/fragment_activity" >
        <action
            android:id="@+id/action_navigation_activity_to_countDownTimerFragment"
            app:destination="@id/navigation_timer" />
    </fragment>


    <fragment
        android:id="@+id/navigation_timer"
        android:name="com.example.pomodoro2.features.countDownTimer.presentation.CountDownTimerFragment"
        android:label="@string/title_timer"
        tools:layout="@layout/fragment_timer" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.example.pomodoro2.features.dashboard.presentation.DashboardFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.pomodoro2.features.utils.AboutFragment"
        android:label="@string/title_about" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.pomodoro2.features.utils.SettingsFragment"
        android:label="@string/title_settings" />

    <dialog
        android:id="@+id/loginFragment"
        android:name="com.example.pomodoro2.features.login.presentation.LoginFragment"
        tools:layout="@layout/fragment_login" />

</navigation>