<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="task"
            type="com.example.pomodoro2.domain.model.Task" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".fragment.EditProfileFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_task"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/taskTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_task_name"
                android:text="@={task.title}"
                android:textAppearance="@style/TextAppearance.Body"
                tools:text="Title" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/image_task"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/taskImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="此处需要添加图标选择功能"
                android:textAppearance="@style/TextAppearance.Body"
                tools:text="Icon"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:foregroundTint="@color/colorPrimary"
            android:text="@string/save"/>

    </LinearLayout>
</layout>